Create new API getSummaryGainLoss getSummaryDividend  getSummaryUNGainLoss
